# shift_transactions_service

./: .dockerignore  .editorconfig  .env  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  fvs  fvs.pub  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: .zshrc  Dockerfile  post-start.sh
k8s/: zar-transactions-service-configmap.yaml  zar-transactions-service-deployment.yaml  zar-transactions-service-secrets.yaml  zar-transactions-service-service.yaml
migrations/: env.py
migrations/versions/: 6c16400b38b1_create_transactions_table.py
my-charts/: values.yaml
my-charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/app/: main.py  transaction.py
src/app/db/: db.py  models.py
src/app/routers/: transaction.py
src/app/services/: __init__.py  transaction.py  transaction_service.py
src/tests/: test_main.py  test_transaction.py
