[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Nikita Renjov <n.renjov@cft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
mypy = "^1.10.1"
fastapi = "^0.111.1"
python-decouple = "^3.8"
pyjwt = "^2.9.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "0.18.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
